Solve issue with navbar not showing login/register while collapsed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,6 +48,10 @@ body {
   margin-top: 0px;
 }
 
+/* l.nav-right.navbar-nav.w-100 {
+  justify-content: end;
+} */
+
 /* when nav-icon is clicked */
 
 .navbar-toggler .top {
